# camera-scene-classifier

./: .gitignore  CMakeLists.txt  README.md  config.example.json  package.xml
launch/: scene_classifier.launch
msg/: SceneClassification.msg
src/: scene_classifier
